--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -625,7 +625,7 @@
     #invest div div {
         font-family: "Microsoft YaHei";
         color: #4c4c4c;
-        margin-top: 10px;
+        line-height: 25px;
         padding: 0;
     }
 
@@ -784,7 +784,7 @@
                 <img id="invest_img"
                      style="margin: -10px auto; width: 290px;height:220px;box-shadow: 0px 3px 6px #999;"/>
             </div>
-            <div class="col-lg-6" id="scroll" style="padding: 0;margin-top:10px;height:310px;width: 47.4% !important;">
+            <div class="col-lg-6" id="scroll" style="padding: 0;margin-top:30px;height:310px;width: 47.4% !important;">
                 <div style="padding: 0;width: 100%;" id="ch">
                     <div class="col-lg-12" style="font-size: 14px;">投资阶段：<span id="invest_stage"></span></div>
                     <div class="col-lg-11" style="font-size: 14px;">投资时间：<span id="invest_time"></span></div>
@@ -797,7 +797,6 @@
                         <a href="" id="invest_web"></a>
                     </div>
                     <div class="col-lg-11" id="invest_intro" style="font-size: 14px;line-height: 2;padding-top: 30px;"></div>
-                    <div style="height: 10px;" class="col-lg-11"></div>
                 </div>
                 <div style="padding: 0;width: 100%" id="en">
                     <div class="col-lg-12" style="font-size: 14px;">Investment Staged：<span id="invest_stage_en"></span>
@@ -819,7 +818,6 @@
                     </div>
                     <div class="col-lg-11 invest_en" id="invest_intro_en"
                          style="font-size: 14px;line-height: 2;padding-top: 30px;"></div>
-                    <div style="height: 10px;" class="col-lg-11"></div>
                 </div>
             </div>
         </div>
