--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -732,13 +732,13 @@
             </div>
             <div id="industry_two_en" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
-                    <span>Medical care</span>
+                    <span>Healthcare</span>
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>Consumption</span>
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
-                    <span>Hign technology</span>
+                    <span>Hign Technologies</span>
                 </div>
             </div>
             <div class='menu menu_en' id="area_en" onclick="index(1)" style='width: 180px;'>
