--- a/Public/admin/menu.html
+++ b/Public/admin/menu.html
@@ -17,6 +17,8 @@
         function add() {
             $('#row_title').empty();
             $('#form').css('display', 'block');
+            $('input').val('');
+            $('textarea').val('');
         }
         function form_close() {
             $('#form').css('display', 'none');
