--- a/Public/admin/news.html
+++ b/Public/admin/news.html
@@ -16,6 +16,8 @@
 
         function add() {
             $('#form').css('display', 'block');
+            $('input').val('');
+            $('textarea').val('');
         }
         function form_close() {
             $('#form').css('display', 'none');
