--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -319,10 +319,10 @@
                 $('#invest_stage,#invest_stage_en').text(r.msg.stage);
                 $('#invest_time,#invest_time_en').text(r.msg.length);
                 $('#areas,#areas_en').text(r.msg.area);
-                $('#trade,#trade_en').text(r.msg.area);
+                $('#trade,#trade_en').text(r.msg.trade);
                 $('#invest_exit_time,#invest_exit_time_en').text(r.msg.exit_time);
                 $('#invest_exit_way,#invest_exit_way_en').text(r.msg.exit_way);
-                $('#invest_web,#invest_web_en').text(r.msg.trade);
+                $('#invest_web,#invest_web_en').text(r.msg.web);
                 $('#invest_web,#invest_web_en').attr('href', "https://" + r.msg.web);
                 $('#invest_reward,#invest_reward_en').text(r.msg.reward);
                 $('#invest_addr,#invest_addr_en').text(r.msg.addr);
