--- a/Public/admin/contact.html
+++ b/Public/admin/contact.html
@@ -164,6 +164,10 @@
     .active ul li a{
         padding-left: 30px !important;
     }
+
+    pre{
+        padding: 0;
+    }
 </style>
 <body>
 <div class="site-holder">
@@ -299,7 +303,8 @@
                         <label for="add" class="col-sm-1 control-label">地址</label>
 
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="add" name="add">
+                            <pre><textarea class=" form-control" id="add" name="add">
+                        </textarea></pre>
                         </div>
                     </div>
                     <div class="form-group">
