--- a/Public/admin/member.html
+++ b/Public/admin/member.html
@@ -43,6 +43,8 @@
                     $('#english').val(r.msg.english);
                     $('#zn_en').val(r.msg.zn_en);
                     $('#show').val(r.msg.show);
+                    $('#intro_show').val(r.msg.intro_show);
+                    $('#intro_en_show').val(r.msg.intro_en_show);
                     $('#insert').text('保存');
                 }
             })
@@ -56,6 +58,8 @@
             var position = $('#position').val();
             var position_en = $('#position_en').val();
             var show = $('#show').val();
+            var intro_show = $('#intro_show').val();
+            var intro_en_show = $('#intro_en_show').val();
             var zn_en = $('#zn_en').val();
             $.ajax({
                 url: '/admin/member/member_save',
@@ -71,6 +75,8 @@
                     "intro": intro,
                     "intro_en":intro_en,
                     "show":show,
+                    "intro_show":intro_show,
+                    "intro_en_show":intro_en_show,
                     "zn_en":zn_en
                 },
                 success: function (r) {
@@ -94,6 +100,8 @@
             var position = $('#position').val();
             var position_en = $('#position_en').val();
             var show = $('#show').val();
+            var intro_show = $('#intro_show').val();
+            var intro_en_show = $('#intro_en_show').val();
             var zn_en = $('#zn_en').val();
             if (button == '保存') {
                 save(this_id);
@@ -111,6 +119,8 @@
                         "intro": intro,
                         "intro_en":intro_en,
                         "show":show,
+                        "intro_show":intro_show,
+                        "intro_en_show":intro_en_show,
                         "zn_en":zn_en
                     },
                     success: function (r) {
@@ -336,10 +346,24 @@
                             </select>
                         </div>-->
                         <label for="show" class="col-sm-1 control-label">展示</label>
-                        <div class="col-sm-2">
+                        <div class="col-sm-1">
                             <select class="form-control" id="show" name="show">
                                 <option>是</option>
                                 <option>否</option>
+                            </select>
+                        </div>
+                        <label for="show" class="col-sm-1 control-label">中文简介</label>
+                        <div class="col-sm-1">
+                            <select class="form-control" id="intro_show" name="show">
+                                <option>展示</option>
+                                <option>不展示</option>
+                            </select>
+                        </div>
+                        <label for="show" class="col-sm-1 control-label">英文简介</label>
+                        <div class="col-sm-1">
+                            <select class="form-control" id="intro_en_show" name="show">
+                                <option>展示</option>
+                                <option>不展示</option>
                             </select>
                         </div>
                     </div>
