--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -728,7 +728,7 @@
             <div id="industry_two" style="display: none">
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>医疗</span>
-                    <br><span style='font-size: 12px'>Medical care</span>
+                    <br><span style='font-size: 12px'>Healthcare</span>
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>消费</span>
@@ -736,7 +736,7 @@
                 </div>
                 <div class="menu_right" onclick="search(this)" style='width: 180px;'>
                     <span>高新技术</span>
-                    <br><span style='font-size: 12px'>Hign technology</span>
+                    <br><span style='font-size: 12px'>Hign technologies</span>
                 </div>
             </div>
             <div class='menu menu_cn' id="area" onclick="index(0)" style='width: 180px;'>
@@ -874,7 +874,7 @@
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;position: fixed;bottom: 0;">
+<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;">
     <div class="row" id="bottom" style="">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
@@ -882,9 +882,6 @@
                 href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
-</div>
-<div class="container" style="margin-top: 50px;width:100%;height: 50px;">
-
 </div>
 </body>
 
