--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -33,6 +33,16 @@
         font-size: 12px;
         font-family: "Microsoft YaHei";
     }
+
+    pre{
+        padding: 0;
+        text-align: left;
+        font-size: 14px;
+        border: 0;
+        background-color: #FFFFFF;
+        color: #a5a5a5;
+        font-family: "Microsoft YaHei";
+    }
 </style>
 <script>
     function show(id) {
@@ -79,19 +89,21 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
+                        var addr='<pre>'+r.msg[i].add+'</pre>';
                         $('#city_list').append("&nbsp;&nbsp;&nbsp;&nbsp;<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>&nbsp;&nbsp;&nbsp;&nbsp;");
                         $('#city').append("<div class='row detail'>" +
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
                         "<div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[i].img + "'>" +
                         "</div>" +
-                        "<div class='col-lg-5 col-lg-offset-1 contact'style='padding-left: 50px;margin-top: 30px'><p><span>T：</span>" + r.msg[i].tel + "</p><p><span>F：</span>" + r.msg[i].fax + "</p><p><span>E：</span>" + r.msg[i].email + "</p><p><p style='float: left;color: #9b761d;'>A：</p><p style='float: left;width: 70%;word-break: break-all;word-wrap: break-word;'>" + r.msg[i].add + "</p></p>" +
+                        "<div class='col-lg-5 col-lg-offset-1 contact'style='padding-left: 50px;margin-top: 30px'><p><span>T：</span>" + r.msg[i].tel + "</p><p><span>F：</span>" + r.msg[i].fax + "</p><p><span>E：</span>" + r.msg[i].email + "</p><p><p style='float: left;color: #9b761d;'>A：</p><p>" + addr + "</p></p>" +
                         "</div>" +
                         "</div>");
                     }
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
+                    var addr0='<pre>'+r.msg[0].add+'</pre>';
                     $('#city_one').append("<div class='row'><div class='col-lg-4 col-lg-offset-1'><img style='width: 110%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-5 col-lg-offset-1 contact' style='padding-left: 50px;margin-top: 30px;'><p><span>T：</span>" + r.msg[0].tel + "</p><p><span>F：</span>" + r.msg[0].fax + "</p><p><span>E：</span>" + r.msg[0].email + "</p><p><p style='float: left;color: #9b761d;'>A：</p><p style='float: left;width: 70%;word-break: break-all;word-wrap: break-word;'>" + r.msg[0].add + "</p></p>" +
+                    "<div class='col-lg-5 col-lg-offset-1 contact' style='padding-left: 50px;margin-top: 30px;'><p><span>T：</span>" + r.msg[0].tel + "</p><p><span>F：</span>" + r.msg[0].fax + "</p><p><span>E：</span>" + r.msg[0].email + "</p><p><p style='float: left;color: #9b761d;'>A：</p><p>" + addr0 + "</p></p>" +
                     "</div>" +
                     "</div>");
                     if (r.msg[0].agent == 1) {
@@ -107,19 +119,21 @@
                 success: function (r) {
                     var len = r.msg.length;
                     for (var i = 0; i < len; i++) {
+                        var addr='<pre>'+r.msg[i].add+'</pre>';
                         $('#city_list').append("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class='city_name' onclick='show(this)'>" + r.msg[i].city + "</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
                         $('#city').append("<div class='row detail'>" +
                         "<div class='hidden'>" + r.msg[i].city + "</div>" +
                         "<div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[i].img + "'>" +
                         "</div>" +
-                        "<div class='col-lg-5  contact' style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><p style='float: left;color: #9b761d;'>地址：</p><p style='style='float: left;width: 70%;word-break: break-all;word-wrap: break-word;'>" + r.msg[i].add + "</p></p>" +
+                        "<div class='col-lg-5  contact' style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[i].tel + "</p><p><span>传真：</span>" + r.msg[i].fax + "</p><p><span>邮箱：</span>" + r.msg[i].email + "</p><p><p style='float: left;color: #9b761d;'>地址：</p><p>" + addr + "</p></p>" +
                         "</div>" +
                         "</div>");
                     }
                     $('#city_list').find('span').first().css('border-bottom','2px #9b761d solid');
+                    var addr0='<pre>'+r.msg[0].add+'</pre>';
                     $('#city_one').append("<div class='row'><div class='col-lg-5 col-lg-offset-1'><img style='width: 100%' src='../.." + r.msg[0].img + "'>" +
                     "</div>" +
-                    "<div class='col-lg-5  contact'style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><p style='float: left;color: #9b761d;'>地址：</p><p style='style='float: left;width: 70%;word-break: break-all;word-wrap: break-word;'>" + r.msg[0].add + "</p></p>" +
+                    "<div class='col-lg-5  contact'style='padding-left: 50px;margin-top: 30px'><p><span>电话：</span>" + r.msg[0].tel + "</p><p><span>传真：</span>" + r.msg[0].fax + "</p><p><span>邮箱：</span>" + r.msg[0].email + "</p><p><p style='float: left;color: #9b761d;'>地址：</p><p>" + addr0 + "</p></p>" +
                     "</div>" +
                     "</div>");
                     if (r.msg[0].agent == 1) {
@@ -344,16 +358,13 @@
 <div class="container" id="city_one" style="margin-top: 40px;">
 
 </div>
-<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;position: fixed;bottom: 0;">
+<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;">
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
             <span style="color: #f1f1f1">麦星投资&nbsp;&nbsp;&nbsp;&nbsp;版权所有©</span>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
-</div>
-<div class="container" style="margin-top: 50px;width:100%;height: 50px;">
-
 </div>
 </body>
 </html>
