--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -372,7 +372,7 @@
         </div>
     </div>
 </div>
-<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;position: fixed;bottom: 0;">
+<div class="container" style="margin-top: 50px;width:100%;background-color: #525c75;">
     <div class="row" id="bottom">
         <div class="col-lg-12"
              style="color: #ffffff;text-align: center;font-family: 'Microsoft YaHei';font-size: 12px;margin-top: 20px;margin-bottom: 20px;">
@@ -380,9 +380,6 @@
                 href="law.html" style="text-decoration: none;color: #fff">法律说明</a>
         </div>
     </div>
-</div>
-<div class="container" style="margin-top: 50px;width:100%;height: 50px;">
-
 </div>
 </body>
 </html>
