--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -435,6 +435,7 @@
         white-space: -moz-pre-wrap;
         white-space: -o-pre-wrap;
         word-wrap: break-word;
+        break-word:keep-all;
         line-height: 25px;
     }
 
