--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -149,6 +149,7 @@
     pre {
         background-color: #ffffff;
         border: 0;
+        break-word:keep-all;
         font-size: 14px;
         text-align: left;
         line-height: 25px;
