--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -149,7 +149,8 @@
     pre {
         background-color: #ffffff;
         border: 0;
-        break-word:keep-all;
+        word-wrap: break-word;
+        word-break: normal;
         font-size: 14px;
         text-align: left;
         line-height: 25px;
