--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -294,6 +294,7 @@
 
     function detail(id) {
         document.documentElement.style.overflow = "hidden";
+        $('#ch,#en').children('div').css('display','block');
         $('#invest').css('display', 'block');
         $('#mask').css('display', 'block');
         var id = $(id).children('p').children('span').text();
@@ -315,58 +316,58 @@
                 var content = '<pre>' + r.msg.description + '</pre>';
                 $('#invest_img,#invest_img_en').attr('src', r.msg.img);
                 if (r.msg.company_all == '') {
-                    $('#invest_name,#invest_name_en').parent().remove();
+                    $('#invest_name,#invest_name_en').parent().css('display','none');
                 } else {
                     $('#invest_name,#invest_name_en').text(r.msg.company_all);
                 }
                 if (r.msg.stage == '') {
-                    $('#invest_stage,#invest_stage_en').parent().remove();
+                    $('#invest_stage,#invest_stage_en').parent().css('display','none');
                 } else {
                     $('#invest_stage,#invest_stage_en').text(r.msg.stage);
                 }
                 if (r.msg.length == '') {
-                    $('#invest_time,#invest_time_en').parent().remove();
+                    $('#invest_time,#invest_time_en').parent().css('display','none');
                 } else {
                     $('#invest_time,#invest_time_en').text(r.msg.length);
                 }
                 if (r.msg.area == '') {
-                    $('#areas,#areas_en').parent().remove();
+                    $('#areas,#areas_en').parent().css('display','none');
                 } else {
                     $('#areas,#areas_en').text(r.msg.area);
                 }
                 if (r.msg.trade == '') {
-                    $('#trade,#trade_en').parent().remove();
+                    $('#trade,#trade_en').parent().css('display','none');
                 } else {
                     $('#trade,#trade_en').text(r.msg.trade);
                 }
                 if (r.msg.exit_time == '') {
-                    $('#invest_exit_time,#invest_exit_time_en').parent().remove();
+                    $('#invest_exit_time,#invest_exit_time_en').parent().css('display','none');
                 } else {
                     $('#invest_exit_time,#invest_exit_time_en').text(r.msg.exit_time);
                 }
                 if (r.msg.exit_way == '') {
-                    $('#invest_exit_way,#invest_exit_way_en').parent().remove();
+                    $('#invest_exit_way,#invest_exit_way_en').parent().css('display','none');
                 } else {
                     $('#invest_exit_way,#invest_exit_way_en').text(r.msg.exit_way);
                 }
                 if (r.msg.web == '') {
-                    $('#invest_web,#invest_web_en').parent().remove();
+                    $('#invest_web,#invest_web_en').parent().css('display','none');
                 } else {
                     $('#invest_web,#invest_web_en').text(r.msg.web);
                     $('#invest_web,#invest_web_en').attr('href', "https://" + r.msg.web);
                 }
                 if (r.msg.reward == '') {
-                    $('#invest_reward,#invest_reward_en').parent().remove();
+                    $('#invest_reward,#invest_reward_en').parent().css('display','none');
                 } else {
                     $('#invest_reward,#invest_reward_en').text(r.msg.reward);
                 }
                 if (r.msg.addr == '') {
-                    $('#invest_addr,#invest_addr_en').parent().remove();
+                    $('#invest_addr,#invest_addr_en').parent().css('display','none');
                 } else {
                     $('#invest_addr,#invest_addr_en').text(r.msg.addr);
                 }
                 if (r.msg.up_stock == '') {
-                    $('#up_stock,#up_stock_en').parent().remove();
+                    $('#up_stock,#up_stock_en').parent().css('display','none');
                 } else {
                     $('#up_stock,#up_stock_en').text(r.msg.up_stock);
                 }
