--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -149,6 +149,9 @@
     pre {
         background-color: #ffffff;
         border: 0;
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -o-pre-wrap;
         font-size: 14px;
         text-align: left;
         line-height: 25px;
