--- a/Public/home/case.html
+++ b/Public/home/case.html
@@ -428,6 +428,8 @@
         white-space: pre-wrap;
         white-space: -moz-pre-wrap;
         white-space: -o-pre-wrap;
+        word-wrap: break-word;
+        word-break: normal;
         line-height: 25px;
     }
 
