--- a/Public/home/team.html
+++ b/Public/home/team.html
@@ -149,6 +149,8 @@
     pre {
         background-color: #ffffff;
         border: 0;
+        word-wrap: break-word;
+        word-break: normal;
         white-space: pre-wrap;
         white-space: -moz-pre-wrap;
         white-space: -o-pre-wrap;
