--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -41,6 +41,8 @@
         border: 0;
         background-color: #FFFFFF;
         color: #a5a5a5;
+        word-wrap: break-word;
+        word-break: normal;
         font-family: "Microsoft YaHei";
     }
 </style>
