--- a/Public/home/contact.html
+++ b/Public/home/contact.html
@@ -43,6 +43,9 @@
         color: #a5a5a5;
         word-wrap: break-word;
         word-break: normal;
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -o-pre-wrap;
         font-family: "Microsoft YaHei";
     }
 </style>
