--- a/Public/home/abort.html
+++ b/Public/home/abort.html
@@ -36,6 +36,13 @@
         font-family: "Microsoft YaHei";
     }
 
+    pre{
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -o-pre-wrap;
+        word-wrap: break-word;
+        word-break: normal;
+    }
 </style>
 <script>
     $(function () {
