--- a/Public/home/index.html
+++ b/Public/home/index.html
@@ -35,6 +35,14 @@
         font-size: 12px;
         font-family: "Microsoft YaHei";
     }
+
+    pre{
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -o-pre-wrap;
+        word-wrap: break-word;
+        word-break: normal;
+    }
 </style>
 <script>
     $(function () {
