--- a/Public/home/news.html
+++ b/Public/home/news.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <title>麦星</title>
     <link rel="stylesheet" type="text/css" href="/Public/home/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/Public/home/css/jquery.mCustomScrollbar.css">
     <script type="text/javascript" src="/Public/home/js/jquery-2.0.min.js"></script>
     <script type="text/javascript" src="/Public/home/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/Public/home/js/jquery.mCustomScrollbar.js"></script>
+    <script type="text/javascript" src="/Public/home/js/jquery.mousewheel.min.js"></script>
+    <script type="text/javascript" src="/Public/home/js/jquery-ui.min.js"></script>
 </head>
 <style>
     ul li {
