--- a/Public/home/news_detail.html
+++ b/Public/home/news_detail.html
@@ -129,6 +129,11 @@
         border: 0;
         font-size: 16px;
         text-align: left;
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -o-pre-wrap;
+        word-wrap: break-word;
+        word-break: normal;
         font-family: 'Microsoft YaHei', sans-serif
     }
 
